fix da luong DAO